# skill-manager

./: .gitignore  README.md  package.json
docs/: 打包交付说明.md  用户使用手册.md
scripts/: build-desktop.ps1  serve-dist.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/services/: config_store.rs  installer.rs  manifest.rs  mod.rs  project_discovery.rs  skill_registry.rs
src/components/: App.test.tsx  InstallDialog.tsx  OverviewCards.tsx  ProjectPanel.tsx  SkillDetail.tsx  SkillTable.tsx
src/lib/: filters.test.ts  filters.ts  labels.ts  mock-data.ts  tauri.ts
src/shared/: defaults.ts  types.ts
