[package]
name = "skill-manager"
version = "0.1.0"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.8", features = [] }
tempfile = "3.13"
toml = "0.8"
walkdir = "2.5"
